Update dependency review configuration and document follow-ups for v0.7 planning